--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ console.log('This runs in your terminal, not the browser!');
   <title>Astro</title>
 </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Hello, vbashur World!</h1>
   </body>
 </html>
 <style>
