--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,9 @@ console.log('This runs in your terminal, not the browser!');
   <title>Astro</title>
 </head>
   <body>
+    <a href="/">Home</a>
+    <a href="/about/">About</a>
+    <a href="/blog/">Blog</a>
     <h1>Hello, vbashur World!</h1>
   </body>
 </html>
