--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+import Footer from '../components/footer.astro';
 // Welcome to Astro! Everything between these triple-dash code fences
 // is your "component frontmatter". It never runs in the browser.
 console.log('This runs in your terminal, not the browser!');
@@ -30,6 +32,7 @@ console.log('This runs in your terminal, not the browser!');
 
 https://arc.net/l/quote/ecnctych
 
+    <Footer/>
 </body>
 </html>
 <style>
