--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import Navigation from '../components/navigation.astro';
+import Footer from '../components/footer.astro';
+import '../styles/global.css';
 // Welcome to Astro! Everything between these triple-dash code fences
 // is your "component frontmatter". It never runs in the browser.
 console.log('This runs in your terminal, not the browser!');
@@ -15,10 +18,9 @@ console.log('This runs in your terminal, not the browser!');
   <title>Astro</title>
 </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation/>
     <h1>Hello, vbashur World!</h1>
+    <Footer/>
   </body>
 </html>
 <style>
