--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import Footer from '../components/footer.astro';
+import Header from "../components/header.astro";
 // Welcome to Astro! Everything between these triple-dash code fences
 // is your "component frontmatter". It never runs in the browser.
 console.log('This runs in your terminal, not the browser!');
@@ -17,9 +18,7 @@ console.log('This runs in your terminal, not the browser!');
     <title>Astro</title>
 </head>
 <body>
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
+    <Header/>
 
 <h1>My Astro Learning Blog</h1>
 <p>This is where I will post about my journey learning Astro.</p>
@@ -33,6 +32,9 @@ console.log('This runs in your terminal, not the browser!');
 https://arc.net/l/quote/ecnctych
 
     <Footer/>
+    <script>
+        import "../scripts/menu.js";
+    </script>
 </body>
 </html>
 <style>
