--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Navigation from '../components/navigation.astro';
 import Footer from '../components/footer.astro';
 import '../styles/global.css';
+import Header from "../components/header.astro";
 // Welcome to Astro! Everything between these triple-dash code fences
 // is your "component frontmatter". It never runs in the browser.
 console.log('This runs in your terminal, not the browser!');
@@ -18,9 +19,12 @@ console.log('This runs in your terminal, not the browser!');
   <title>Astro</title>
 </head>
   <body>
-    <Navigation/>
+    <Header/>
     <h1>Hello, vbashur World!</h1>
     <Footer/>
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
 <style>
