--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,5 +77,16 @@ h1 {
         padding: 15px 20px;
     }
 
+    .hamburger {
+        display: none;
+    }
+}
 
+html.dark {
+    background-color: #0d0950;
+    color: #fff;
+}
+
+.dark .nav-links a {
+    color: #fff;
 }
